src/objects/BMCServiceDesk__SYSQVQueryFolder__c.object
<CustomObject>
    <description>This object allows you to store data for the QuickViews and folders mapping.</description>
    <fields>
        <fullName>BMCServiceDesk__FKFolder__c</fullName>
        <label>FKParentFolder</label>
        <referenceTo>BMCServiceDesk__SYSQVFolder__c</referenceTo>
        <relationshipLabel>SYSQVQueryFolders</relationshipLabel>
        <relationshipName>SYSQVQueryFolders1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKQuery__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FKQuery</label>
        <referenceTo>BMCServiceDesk__SYSQVQuery__c</referenceTo>
        <relationshipLabel>SYSQVQueryFolders</relationshipLabel>
        <relationshipName>SYSQVQueryFolders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Sequence__c</fullName>
        <externalId>true</externalId>
        <label>Sequence Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Quickview Folder Mapping</label>
    <nameField>
        <displayFormat>SYSQVFolderName-{0000}</displayFormat>
        <label>SYSQVQueryFolder Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SYSQVQueryFolders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>